responsiveness fix on small mobile screens

--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ input[type=number] {
 
 @layer components {
   .options-btn {
-    @apply text-sm xl:text-lg h-8 w-20 sm:h-10 sm:w-32 md:h-12 md:w-36 xl:h-16 xl:w-44 rounded-full 
+    @apply text-sm xl:text-lg h-10 w-[5.5rem] sm:h-10 sm:w-32 md:h-12 md:w-36 xl:h-16 xl:w-44 rounded-full 
     shadow-sm hover:text-gray-100 transition delay-75 ease-in-out;
   }
   .settings-title {
